# deltasim

./: .gitignore  CMakeLists.txt  README.md  delta.h  delta_gl.h  gl_util.h  main.cpp  material.h  svector.h
LatexPaper/: Kinematics.aux  Kinematics.blg  Kinematics.out  Kinematics.tex
